sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	for (k<-0 to getNombreValeurs()-2){
        ^