sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	while(aa){
	for (k<-0 to getNombreValeurs()-2){
		if(plusPetit(k+1,k)){
			echange(k,k+1)
		}
	}
	}
	
}

def aa() :boolean {
	for (k<-0 to getNombreValeurs()-2){
		if(plusPetit(k+1,k)){
	
			echange(k,k+1)
			return true
		}else{
			return false
		}
}
}